# MyCudaProject

./: CMakeLists.txt  README.md  create_disk.py  plot_trajectory.py  requirements.txt  starmap_preprocess.py
src/: camera.cuh  constants.cuh  main.cu  point.cuh  ray.cuh  tests.cuh  trajectorygen.cuh  utilities.cuh
